Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.13.0
-
Fix Version/s: Qt Creator 4.13.2, Qt Creator 4.14.0-beta1
-
Component/s: All Other Issues
-
Labels:None
-
Commits:3ca4544869531830805fc2080bffda39f805fcb9 (qt-creator/qt-creator/4.13)
Description
Attachments
For Gerrit Dashboard: QTCREATORBUG-24692 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
315240,2 | UpdateInfo: Include package versions in update notification | 4.13 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |