UpdateInfo: Include package versions in update notification

Fixes: QTCREATORBUG-24692
Change-Id: I5e3327b92b533dd21eabbd14402b81c1c5ad8d92
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>